# microver

./: LICENSE  README.md  pyproject.toml  setup.sh
src/microver/: __init__.py  __main__.py  camera.py  input.py  main.py  model.py
src/models/: coco_classes.json
