[project]
name = "microver"
version = "0.1.0"
dependencies = [
    "pygame",
    "flask",
    "pyserial",
    "opencv-python",
    "waitress",
    "onnxruntime"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
microver = "microver.__main__:main"
